# uncat

./: .clang-format  .clang-tidy  .gitignore  .markdownlint.json  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  c-cpp.yml  main.yml  markdownlint.yml
examples/: CMakeLists.txt
examples/compile_time/: CMakeLists.txt  main.cc
examples/compile_time_algorithm/: main.cc
examples/hello_world/: CMakeLists.txt  main.cc
examples/sort/: CMakeLists.txt  main.cc  quick_sort.h  sort.h
examples/todo/: CMakeLists.txt  main.cc  main.cpp
include/orz/detail/: list.hpp  type.hpp
include/pw/: world_line.hpp
include/uncat/: finite_state_machine.hpp  messenger.hpp  parallel_world.hpp  randomly.hpp  types.hpp
include/uncat/detail/: types.hpp
include/vt/detail/: list.hpp  type.hpp
modules/: CMakeLists.txt
modules/cta/: CMakeLists.txt
modules/cta/include/uncat/cta/: binary_tree.h  common.h  sort.h
modules/exec/: CMakeLists.txt
modules/exec/include/uncat/exec/: executor.h  executor.hpp  status.h  status.hpp
modules/exec/src/: executor.cc  executor.cpp  status.cc  status.cpp
modules/far/: CMakeLists.txt
modules/far/include/uncat/far/: far.h  far.hpp
modules/fsm/: CMakeLists.txt
modules/fsm/include/uncat/fsm/: common.h  list.h  state_machine.h  state_machine.hpp
modules/generate/: CMakeLists.txt
modules/generate/include/uncat/generate/: fill.h
modules/messenger/: CMakeLists.txt
modules/messenger/include/uncat/messenger/: executor.h  messenger.h  messenger.hpp
modules/messenger/src/: executor.cc
modules/rand/: CMakeLists.txt
modules/rand/include/uncat/rand/: fill.h  fill.hpp
modules/types/: CMakeLists.txt
modules/types/include/uncat/types/: concepts.h  concepts.hpp  types.h  types.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/benchmark_tests/: CMakeLists.txt  far_test.cc  far_test.cpp  messenger_test.cc  messenger_test.cpp  sample_test.cc  todo_test.cc
tests/functional_tests/: CMakeLists.txt  exec_test.cc  exec_test.cpp  far_test.cc  far_test.cpp  finite_state_machine_test.cpp  fsm_test.cc  fsm_test.cpp  messenger_test.cc  messenger_test.cpp  orz_test.cpp  parallel_world_test.cpp  pw_test.cpp  types_test.cc  types_test.cpp  vt_test.cpp
